fix: active chapter overflowing causing button nav to go outside screen. refactor: do not allow miniplayer swipe trigger when chapterlist is scrollable

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4532,6 +4532,7 @@ body {
       -webkit-box-orient: vertical;
       line-clamp: 1;
       overflow: hidden;
+      word-break: break-all;
       max-width: 600px;
     }
 
